--- a/sass/_hystori-codex.scss
+++ b/sass/_hystori-codex.scss
@@ -1,8 +1,8 @@
 // Hystori-codex
 .hystori-codex {
-	background: $secondaryPink;
-	color: $tertiaryPink;
-	border-top: 2px solid $tertiaryPink;
+	background: $codexBG;
+	color: $codexText;
+	border-top: 2px solid $codexBorder;
 	padding: 15px;
 
 	&__close {
@@ -16,11 +16,12 @@
 		justify-content: center;
 		height: 20px;
 		width: 20px;
+		color: $codexHighlight;
 
 		&:hover, &:focus {
 			transition: 0.25s all ease-in;
 			color: $white;
-			background: $black;
+			background: $codexHighlight;
 			cursor: pointer;
 		}
 	}
@@ -31,7 +32,6 @@
 	&__title {
 		font-size: 1.5em;
 		margin: 0 0 15px 0;
-		text-decoration: underline;
 	}
 
 	&__key {
@@ -44,16 +44,54 @@
 		margin: 5px 0;
 	}
 
+	&__crumb {
+		text-decoration: underline;
+		border-radius: 10px;
+		color: $primary;
+		font-weight: 100;
+		display: inline-block;
+		padding: 2px 4px;
+		margin: 0 4px;
+		&:hover, &:focus {
+			cursor: pointer;
+			box-shadow: 0 0 0 1px $codexHighlight; /* All the borders by using the spread properties */
+			text-decoration: none;
+		}
+
+		&:active {
+			opacity: 0.5;
+		}
+	}
+
+	&__selected-crumb {
+		margin: 2px 8px;
+	}
+
 	&__link {
 		text-decoration: underline;
 		border-radius: 10px;
+		color: $primary;
+		font-weight: 700;
+		display: inline-block;
+		padding: 2px 4px;
 
 		&:hover, &:focus {
-			transition: 0.25s ease-out all;
-			color: $white;
-			background: $black;
 			cursor: pointer;
-			padding: 0 3px;
+			box-shadow: 0 0 0 2px $codexHighlight; /* All the borders by using the spread properties */
+			text-decoration: none;
 		}
+
+		&:active {
+			opacity: 0.5;
+		}
+	}
+}
+
+.codex-title {
+	&__logo {
+		position: relative;
+	    max-height: 29px;
+	    right: 5px;
+	    top: 7px;
 	}
 }
