--- a/sass/_hystori-year-list.scss
+++ b/sass/_hystori-year-list.scss
@@ -3,14 +3,14 @@
 .hystori-sidebar__title {
 	font-weight: 900;
 	text-align: center;
-	border-bottom: 2px solid $tertiaryPink;
+	border-bottom: 2px solid $codexBorder;
 	padding: 10px 0;
 	background: $white;
 	color: $black;
 }
 
 .hystori-year-list {
-	background: $primaryPink;
+	background: $codexBG;
 	width: 100%;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -25,7 +25,7 @@
 
 	.hystori-year-list__item {
 		text-align: center;
-		background: $primaryPink;
+		background: $codexBG;
 		transition: 0.15s ease-in;
 		padding: 5px 0;
 		width: 100%;
@@ -38,12 +38,12 @@
 
 		&.active {
 			text-decoration: underline;
-			background: $tertiaryPink;
+			background: $codexBG;
 			color: $white;
 		}
 
 		&:hover, &:focus {
-			background: $secondaryPink;
+			background: $codexBG;
 			cursor: pointer;
 		}
 	}
