In progress commit, just styles

--- a/sass/_hystori-codex.scss
+++ b/sass/_hystori-codex.scss
@@ -2,7 +2,7 @@
 .hystori-codex {
 	background: $codexBG;
 	color: $codexText;
-	border-top: 2px solid $codexBorder;
+	border-left: 2px solid $codexBorder;
 	padding: 15px;
 
 	&__close {
