Whole bunch of progress I never saved I guess

--- a/sass/_colours.scss
+++ b/sass/_colours.scss
@@ -9,7 +9,7 @@ $squareHover: $white;
 $squareHoverText: $black;
 $textHover: $primary;
 
-$codexBorder: $black;
+$codexBorder: $primary;
 $codexBG: $white;
 $codexText: $black;
 $codexHighlight: $primary;
