--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,5 +1,5 @@
 // lol
-@import url('https://fonts.googleapis.com/css?family=Concert+One|Courgette|Fredoka+One|Great+Vibes|Pacifico|Prosto+One|Satisfy');
+@import url('https://fonts.googleapis.com/css?family=Concert+One|Lobster|Courgette|Fredoka+One|Great+Vibes|Pacifico|Prosto+One|Satisfy');
 
 $fontConcert: 'Concert One', cursive;
 $fontPacifico: 'Pacifico', cursive;
@@ -8,3 +8,4 @@ $fontSatisfy: 'Satisfy', cursive;
 $fontCourgette: 'Courgette', cursive;
 $fontFredoka: 'Fredoka One', cursive;
 $fontProsto: 'Prosto One', cursive;
+$fontLobster: 'Lobster', cursive;
