--- a/sass/_hystori-codex.scss
+++ b/sass/_hystori-codex.scss
@@ -34,6 +34,11 @@
 		margin: 0 0 15px 0;
 	}
 
+	&__date {
+		font-size: 0.6em;
+		font-style: italic;
+	}
+
 	&__key {
 		font-style: italic;
 		font-size: 0.8em;
